Started media queries for landing page

--- a/index.html
+++ b/index.html
@@ -77,153 +77,169 @@
           </div>
         </div>
       </div>
-      <div class="exhibition ecology">
-        <h2>Time to change</h2>
-      </div>
-      <div class="exhibition-brief">
+      <div class="wrapper">
         <div>
-          <div class="exhibition-brief-specs">
-            <i class="fas fa-thumbs-up"></i>
-            <p>7 - 9 years old</p>
+          <div class="exhibition ecology">
+            <h2>Time to change</h2>
           </div>
-          <div class="exhibition-brief-specs">
-            <i class="fas fa-globe-americas"></i>
-            <p>Ecology</p>
-          </div>
-          <div class="exhibition-brief-specs">
-            <i class="fas fa-calendar-alt"></i>
-            <date>15 Jan - 15 Dec</date>
+          <div class="exhibition-brief">
+            <div>
+              <div class="exhibition-brief-specs">
+                <i class="fas fa-thumbs-up"></i>
+                <p>7 - 9 years old</p>
+              </div>
+              <div class="exhibition-brief-specs">
+                <i class="fas fa-globe-americas"></i>
+                <p>Ecology</p>
+              </div>
+              <div class="exhibition-brief-specs">
+                <i class="fas fa-calendar-alt"></i>
+                <date>15 Jan - 15 Dec</date>
+              </div>
+            </div>
+            <div>
+              <div class="exhibition-brief-cta">
+                <a class="cta" href="#">view</a>
+              </div>
+            </div>
           </div>
         </div>
         <div>
-          <div class="exhibition-brief-cta">
-            <a class="cta" href="#">view</a>
+          <div class="exhibition cosmology">
+            <h2>The sky above us</h2>
           </div>
-        </div>
-      </div>
-      <div class="exhibition cosmology">
-        <h2>The sky above us</h2>
-      </div>
-      <div class="exhibition-brief">
-        <div>
-          <div class="exhibition-brief-specs">
-            <i class="fas fa-thumbs-up"></i>
-            <p>10 - 15 years old</p>
-          </div>
-          <div class="exhibition-brief-specs">
-            <i class="fas fa-meteor"></i>
-            <p>Cosmology</p>
-          </div>
-          <div class="exhibition-brief-specs">
-            <i class="fas fa-calendar-alt"></i>
-            <date>15 Jan - 15 Dec</date>
-          </div>
-        </div>
-        <div>
-          <div class="exhibition-brief-cta">
-            <a class="cta" href="#">view</a>
-          </div>
-        </div>
-      </div>
-      <div class="exhibition bio-and-med">
-        <h2>The micro world</h2>
-      </div>
-      <div class="exhibition-brief">
-        <div>
-          <div class="exhibition-brief-specs">
-            <i class="fas fa-thumbs-up"></i>
-            <p>9 - 15 years old</p>
-          </div>
-          <div class="exhibition-brief-specs">
-            <i class="fas fa-microscope"></i>
-            <p>Biology & Medicine</p>
-          </div>
-          <div class="exhibition-brief-specs">
-            <i class="fas fa-calendar-alt"></i>
-            <date>15 Jan - 15 Dec</date>
+          <div class="exhibition-brief">
+            <div>
+              <div class="exhibition-brief-specs">
+                <i class="fas fa-thumbs-up"></i>
+                <p>10 - 15 years old</p>
+              </div>
+              <div class="exhibition-brief-specs">
+                <i class="fas fa-meteor"></i>
+                <p>Cosmology</p>
+              </div>
+              <div class="exhibition-brief-specs">
+                <i class="fas fa-calendar-alt"></i>
+                <date>15 Jan - 15 Dec</date>
+              </div>
+            </div>
+            <div>
+              <div class="exhibition-brief-cta">
+                <a class="cta" href="#">view</a>
+              </div>
+            </div>
           </div>
         </div>
         <div>
-          <div class="exhibition-brief-cta">
-            <a class="cta" href="#">View</a>
+          <div class="exhibition bio-and-med">
+            <h2>The micro world</h2>
+          </div>
+          <div class="exhibition-brief">
+            <div>
+              <div class="exhibition-brief-specs">
+                <i class="fas fa-thumbs-up"></i>
+                <p>9 - 15 years old</p>
+              </div>
+              <div class="exhibition-brief-specs">
+                <i class="fas fa-microscope"></i>
+                <p>Biology & Medicine</p>
+              </div>
+              <div class="exhibition-brief-specs">
+                <i class="fas fa-calendar-alt"></i>
+                <date>15 Jan - 15 Dec</date>
+              </div>
+            </div>
+            <div>
+              <div class="exhibition-brief-cta">
+                <a class="cta" href="#">View</a>
+              </div>
+            </div>
           </div>
         </div>
-      </div>
-      <div class="exhibition evolution">
-        <h2>Bones talk</h2>
-      </div>
-      <div class="exhibition-brief">
         <div>
-          <div class="exhibition-brief-specs">
-            <i class="fas fa-thumbs-up"></i>
-            <p>7 - 10 years old</p>
+          <div class="exhibition evolution">
+            <h2>Bones talk</h2>
           </div>
-          <div class="exhibition-brief-specs">
-            <i class="fas fa-dna"></i>
-            <p>Evolution</p>
-          </div>
-          <div class="exhibition-brief-specs">
-            <i class="fas fa-calendar-alt"></i>
-            <date>15 Jan - 15 Dec</date>
-          </div>
-        </div>
-        <div>
-          <div class="exhibition-brief-cta">
-            <a class="cta" href="#">View</a>
+          <div class="exhibition-brief">
+            <div>
+              <div class="exhibition-brief-specs">
+                <i class="fas fa-thumbs-up"></i>
+                <p>7 - 10 years old</p>
+              </div>
+              <div class="exhibition-brief-specs">
+                <i class="fas fa-dna"></i>
+                <p>Evolution</p>
+              </div>
+              <div class="exhibition-brief-specs">
+                <i class="fas fa-calendar-alt"></i>
+                <date>15 Jan - 15 Dec</date>
+              </div>
+            </div>
+            <div>
+              <div class="exhibition-brief-cta">
+                <a class="cta" href="#">View</a>
+              </div>
+            </div>
           </div>
         </div>
       </div>
-      <section>
+      <section class="wrapper">
         <h2>Explore</h2>
-        <h3>for children</h3>
-        <div class="explore">
-          <div class="explore-picture">
-            <img
-              alt="Child having fun with VR glasses"
-              class="image-small"
-              src="images/explore/children.jpg"
-            />
-          </div>
-          <div class="explore-brief">
-            <p>
-              Are you a young person looking to learn more about science? Let's
-              learn together
-            </p>
-            <a class="cta" href="#">view</a>
-          </div>
-        </div>
-        <h3>for teachers</h3>
-        <div class="explore">
-          <div class="explore-picture">
-            <img
-              alt="Teacher and students in science class"
-              class="image-small"
-              src="images/explore/teachers.jpg"
-            />
-          </div>
-          <div class="explore-brief">
-            <p>
-              We want to work with schools to create places of learning and
-              exploring.
-            </p>
-            <a class="cta" href="#">view</a>
+        <div>
+          <h3>for children</h3>
+          <div class="explore">
+            <div class="explore-picture">
+              <img
+                alt="Child having fun with VR glasses"
+                class="image-small"
+                src="images/explore/children.jpg"
+              />
+            </div>
+            <div class="explore-brief">
+              <p>
+                Are you a young person looking to learn more about science?
+                Let's learn together
+              </p>
+              <a class="cta" href="#">join</a>
+            </div>
           </div>
         </div>
-        <h3>for researchers</h3>
-        <div class="explore">
-          <div class="explore-picture">
-            <img
-              alt="Researcher looking into a microscope"
-              class="image-small"
-              src="images/explore/researchers.jpg"
-            />
+        <div>
+          <h3>for teachers</h3>
+          <div class="explore">
+            <div class="explore-picture">
+              <img
+                alt="Teacher and students in science class"
+                class="image-small"
+                src="images/explore/teachers.jpg"
+              />
+            </div>
+            <div class="explore-brief">
+              <p>
+                We want to work with schools to create places of learning and
+                exploring.
+              </p>
+              <a class="cta" href="#">join</a>
+            </div>
           </div>
-          <div class="explore-brief">
-            <p>
-              Are you looking to get involved with our team of researchers and
-              academics? Join us.
-            </p>
-            <a class="cta" href="#">view</a>
+        </div>
+        <div>
+          <h3>for researchers</h3>
+          <div class="explore">
+            <div class="explore-picture">
+              <img
+                alt="Researcher looking into a microscope"
+                class="image-small"
+                src="images/explore/researchers.jpg"
+              />
+            </div>
+            <div class="explore-brief">
+              <p>
+                Are you looking to get involved with our team of researchers and
+                academics? Join us.
+              </p>
+              <a class="cta" href="#">join</a>
+            </div>
           </div>
         </div>
       </section>
