Made footer for phone and vertical tab

--- a/index.html
+++ b/index.html
@@ -25,12 +25,14 @@
   </head>
   <body>
     <header>
-      <a href="index.html"
-        ><img
-          alt="Community science museum logo"
-          class="logo"
-          src="images/logo-mobile.png"
-      /></a>
+      <div>
+        <a href="index.html"
+          ><img
+            alt="Community science museum logo"
+            class="logo"
+            src="images/logo-mobile.png"
+        /></a>
+      </div>
       <div>
         <label for="hamburger-menu"><i class="fas fa-bars"></i></label>
         <input type="checkbox" id="hamburger-menu" />
@@ -243,7 +245,7 @@
           </div>
         </div>
       </section>
-      <section>
+      <aside>
         <h2>News</h2>
         <div class="news">
           <h3>visiting professor of aeronautics</h3>
@@ -309,7 +311,30 @@
             </div>
           </div>
         </div>
-      </section>
+      </aside>
     </main>
+    <footer>
+      <div class="newsletter">
+        <div>
+          <p>subscribe to our newsletter</p>
+          <form method="get">
+          <input class="form" type="email" placeholder="Email address" />
+          <div>
+          <input class="cta cta-newsletter" type="submit" value="send" />
+        </div>
+        </form>
+        </div>
+      </div>
+      <div class="socials">
+        <p>follow us on social media</p>
+        <div>
+          <i class="fab fa-tiktok"></i>
+          <i class="fab fa-youtube"></i>
+          <i class="fab fa-instagram"></i>
+          <i class="fab fa-facebook-square"></i>
+        </div>
+      </div>
+      <p class="copyright">&#169 Copyright 2021</p>
+    </footer>
   </body>
 </html>
