Made main hamburger menu and its media queries

--- a/index.html
+++ b/index.html
@@ -26,6 +26,44 @@
   <body>
     <header>
       <div>
+      <a href="index.html"
+          ><img
+            alt="Community science museum logo"
+            class="logo"
+            src="images/logo-mobile.png"
+        /></a>
+      </div>
+      <div>
+      <label class="hamburger-label" for="hamburger-menu"><i class="fas fa-bars"></i></label>
+      <input type="checkbox" id="hamburger-menu">
+      <nav>
+          <ul>
+            <li><span></i> <a class="hidden-item-large-screen" href="#"><i class="fas fa-images"></i>Exhibitions</a></span>
+            </li>
+            <li>
+              <span>
+              <a class="hidden-item-large-screen" href="#"><i class="fas fa-binoculars"></i>Explore</a></span>
+            </li>
+            <li>
+              <span><a class="hidden-item-large-screen" href="#"><i class="fas fa-landmark"></i>The museum</a></span>
+            </li>
+            <li>
+              <span><a class="hidden-item-small-screen display-item-large-screen" href="#"><i class="fas fa-tasks"></i>Plan your visit</a></span>
+              
+            </li>
+            <li><span><a href="#"><i class="fas fa-hands-helping"></i>Get involved</a></span>
+              
+            </li>
+            <li><span>
+              <a href="#"><i class="fas fa-question-circle"></i>Who we are</a></span>
+            </li>
+          </ul>
+      </nav>
+    </div>
+  </header>
+    <!--
+    <header>
+      <div>
         <a href="index.html"
           ><img
             alt="Community science museum logo"
@@ -54,6 +92,7 @@
         </nav>
       </div>
     </header>
+  -->
     <main>
       <div class="featured-exhibition">
         <h1>The era of robots</h1>
