--- a/get-involved.html
+++ b/get-involved.html
@@ -5,10 +5,10 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta
       name="description"
-      content="See in what ways you can make the most out of our museum"
+      content="See in what ways you can contribute towards the museum"
     />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Community Science Museum | Explore</title>
+    <title>Community Science Museum | Get involved</title>
     <link rel="preconnect" href="https://fonts.googleapis.com" />
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
     <link
@@ -16,7 +16,7 @@
       rel="stylesheet"
     />
     <link href="css/style.css" rel="stylesheet" />
-    <!--<link href="css/index.css" rel="stylesheet" />-->
+  <!--  <link href="css/index.css" rel="stylesheet" /> -->
     <link href="css/media.css" rel="stylesheet" />
     <script
       src="https://kit.fontawesome.com/9aef28119c.js"
@@ -65,46 +65,45 @@
     </div>
   </header>
     <main>
-        <h1>Explore</h1>
-        <h2>For children</h2>
-        <p>Are you a young person looking to learn more about science? Come on down to our museum, there’s plenty to see and do.</p>
-
-        <p>You can learn about Newtonian physics from our bumper swing, or why not travel back in time and meet our resident Woolly Mammoth? Our exhibits are designed to be accessible for interested minds, so make sure you come ready to learn and explore.
+        <h1>Get involved</h1>
+        <h2>Support</h2>
+        <p>There are various ways you can support the museum. Donations are very welcome and are an important way we keep this museum open and accessible to the whole community. 
         </p>
-        <p>We also have the Young Stars club which meets once a week on a Saturday between <time>10:00</time> and <time>13:00</time> where you’ll get to explore and experiment with our team of experts.
+        <p>You can also support us by donating items of interest to the museum’s collections. If you have some item or collection that you think others would enjoy, please let us know by <a href="#">contacting our Collections Department</a> and they will be able to assist you.</p>
+        <h2>Volunteer</h2>
+        <p>A number of people volunteer their time and effort to keep the displays in good order and ready for visitors to come and enjoy. Volunteering has its perks including getting to see behind the scenes of a working museum, access to staff-only lectures, and a monthly lunch where all staff and volunteers come together to discuss ideas for future exhibits and strategies for the museum.
         </p>
-        <p>During the school holidays we run special holiday clubs where you can join other children your age to go on a journey of discovery. Each holiday we pick a new theme to explore. To find out more about the holiday club and how you can join, <a href="#">send us a message.</a> 
+        <p>You can help volunteer in a number of different spheres. Please <a href="#">contact us</a> if you’d like to find out more about how you can get involved.
         </p>
-        <h2>For teachers</h2>
-        <p>As a community-driven museum, we want to work with schools to create places of learning and exploring. Our team are on hand to give your students guided tours of the museum, teach them in our learning laboratory, and provide great video presentations that will excite and inspire them.
+        <h2>Internships</h2>
+        <p>Are you interested in working in a museum? Do you enjoy the fun and excitement of sharing the wonders of nature with people? Well you could be just the right person to enjoy an internship at the museum.
         </p>
-        <p>Please <a href="#">get in touch with us here</a> to find out more about our facilities and to arrange a time to bring your students through for a visit.</p>
-        <h2>For researchers</h2>
-        <p>Are you looking to get involved with our team of researchers and academics? Our museum offers various ways for you to use our resources and contribute towards them. We have online records, laboratory space, and a working relationship with a number of universities around the country. To find out more about what we can offer, please <a href="#">get in touch with us here.</a> 
+        <p>You’ll be learning from a number of different academics and people who are passionate about science and sharing it with the wider community.
         </p>
-    </main>
-    <footer>
-      <div class="newsletter">
-        <div>
-          <p>subscribe to our newsletter</p>
-          <form method="get">
-          <input class="form" type="email" placeholder="Email address" />
-          <div>
-          <input class="cta cta-newsletter" type="submit" value="send" />
-        </div>
-        </form>
-        </div>
-      </div>
-      <div class="socials">
-        <p>follow us on social media</p>
-        <div>
-          <i class="fab fa-tiktok"></i>
-          <i class="fab fa-youtube"></i>
-          <i class="fab fa-instagram"></i>
-          <i class="fab fa-facebook-square"></i>
-        </div>
-      </div>
-      <p class="copyright">&#169 Copyright 2021</p>
-    </footer>
-  </body>
+        <p>Please <a href="#">get in touch with us here</a> to ask for an application form.</p>
+</main>
+<footer>
+  <div class="newsletter">
+    <div>
+      <p>subscribe to our newsletter</p>
+      <form method="get">
+      <input class="form" type="email" placeholder="Email address" />
+      <div>
+      <input class="cta cta-newsletter" type="submit" value="send" />
+    </div>
+    </form>
+    </div>
+  </div>
+  <div class="socials">
+    <p>follow us on social media</p>
+    <div>
+      <i class="fab fa-tiktok"></i>
+      <i class="fab fa-youtube"></i>
+      <i class="fab fa-instagram"></i>
+      <i class="fab fa-facebook-square"></i>
+    </div>
+  </div>
+  <p class="copyright">&#169 Copyright 2021</p>
+</footer>
+</body>
 </html>
