--- a/the-museum.html
+++ b/the-museum.html
@@ -69,8 +69,10 @@
         <h2>Plan your visit</h2>
         <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d10155.580165979953!2d10.678821159993134!3d59.9051724975065!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x46416c37728bfd47%3A0x845a8bd80a0e4264!2sMuseumsveien%206%2C%200287%20Oslo!5e0!3m2!1sen!2sno!4v1638257297191!5m2!1sen!2sno" width="600" height="450" style="border:0;" allowfullscreen="" loading="lazy"></iframe>
         <h3><i class="fas fa-map-marked-alt"></i>Location</h3>
-        <p>Museumsveien 6</p>
-        <p>0287, Oslo</p>
+        <address>
+        Museumsveien 6<br>
+        0287, Oslo
+        </address>
         <h3><i class="fas fa-clock"></i>Opening hours</h3>
         <p>Monday: Closed</p>
         <p>Tuesday: <time>10:00</time> – <time>16:00</time></p>
@@ -81,7 +83,8 @@
         <p>Sunday: <time>09:00</time> – <time>13:00</time></p>
         <h3><i class="fas fa-ticket-alt"></i>Admission</h3>
         <p>The entrance is free for all.</p>
-        <p>There are guided tours of the museum that leave every hour. These tours are 70 NOK per person and include a handy printed guide of the museum. 
+        <p>There are guided tours of the museum that leave every hour. These tours are<span
+            itemprop="price" content="70"> 70 </span><span itemprop="priceCurrency" content="NOK">NOK</span> per person and include a handy printed guide of the museum. 
         </p>
         <p>If you would like to organise a guided tour for your group of 6 or more people, please <a href="#">contact us</a> to arrange the tour.</p>
         <h3><i class="fas fa-wheelchair"></i>Accessibility</h3>
