--- a/exhibitions.html
+++ b/exhibitions.html
@@ -189,10 +189,10 @@
       <div class="newsletter">
         <div>
           <p>subscribe to our newsletter</p>
-          <form method="get">
+          <form method="post">
           <input class="form" type="email" placeholder="Email address" />
           <div>
-          <input class="cta cta-newsletter" type="submit" value="send" />
+          <input class="cta cta-submit" type="submit" value="send" />
         </div>
         </form>
         </div>
