--- a/index.html
+++ b/index.html
@@ -38,27 +38,27 @@
       <input type="checkbox" id="hamburger-menu">
       <nav>
           <ul>
-            <li><span></i> <a class="hidden-item-large-screen" href="#"><i class="fas fa-images"></i>Exhibitions</a></span>
+            <li><span></i> <a class="hidden-item-large-screen" href="exhibitions.html"><i class="fas fa-images"></i>Exhibitions</a></span>
             </li>
             <li>
               <span>
-              <a class="hidden-item-large-screen" href="#"><i class="fas fa-binoculars"></i>Explore</a></span>
+              <a class="hidden-item-large-screen" href="explore.html"><i class="fas fa-binoculars"></i>Explore</a></span>
             </li>
             <li>
-              <span><a class="hidden-item-large-screen" href="#"><i class="fas fa-landmark"></i>The museum</a></span>
+              <span><a class="hidden-item-large-screen" href="the-museum.html"><i class="fas fa-landmark"></i>The museum</a></span>
             </li> 
             <li>
               <span><label class="plan-your-visit-label hidden-item-small-screen display-item-large-screen" for="plan-your-visit-menu"><input type="checkbox" id="plan-your-visit-menu"><a href="#"><i class="fas fa-tasks"></i>Plan your visit</a></span></label>
               <div class="plan-your-visit-items">
-                <span></i> <a class="hidden-item-small-screen display-item-large-screen" href="#"><i class="fas fa-images"></i>Exhibitions</a></span>
-                  <span><a class="hidden-item-small-screen display-item-large-screen" href="#"><i class="fas fa-binoculars"></i>Explore</a></span>
-                    <span><a class="hidden-item-small-screen display-item-large-screen" href="#"><i class="fas fa-landmark"></i>The museum</a></span>
+                <span></i> <a class="hidden-item-small-screen display-item-large-screen" href="exhibitions.html"><i class="fas fa-images"></i>Exhibitions</a></span>
+                  <span><a class="hidden-item-small-screen display-item-large-screen" href="explore.html"><i class="fas fa-binoculars"></i>Explore</a></span>
+                    <span><a class="hidden-item-small-screen display-item-large-screen" href="the-museum.html"><i class="fas fa-landmark"></i>The museum</a></span>
               </div>
             </li>
-            <li><span><a href="#"><i class="fas fa-hands-helping"></i>Get involved</a></span>
+            <li><span><a href="get-involved.html"><i class="fas fa-hands-helping"></i>Get involved</a></span>
             </li>
             <li><span>
-              <a href="#"><i class="fas fa-question-circle"></i>Who we are</a></span>
+              <a href="who-we-are.html"><i class="fas fa-question-circle"></i>Who we are</a></span>
             </li>
           </ul>
       </nav>
@@ -84,7 +84,7 @@
           </div>
           <div>
             <div class="exhibition-brief-cta">
-              <a class="cta cta-large" href="#">view</a>
+              <a class="cta cta-large" href="exhibitions.html">view</a>
             </div>
           </div>
         </div>
@@ -111,7 +111,7 @@
             </div>
             <div>
               <div class="exhibition-brief-cta">
-                <a class="cta" href="#">view</a>
+                <a class="cta" href="exhibitions.html">view</a>
               </div>
             </div>
           </div>
@@ -137,7 +137,7 @@
             </div>
             <div>
               <div class="exhibition-brief-cta">
-                <a class="cta" href="#">view</a>
+                <a class="cta" href="exhibitions.html">view</a>
               </div>
             </div>
           </div>
@@ -163,7 +163,7 @@
             </div>
             <div>
               <div class="exhibition-brief-cta">
-                <a class="cta" href="#">View</a>
+                <a class="cta" href="exhibitions.html">View</a>
               </div>
             </div>
           </div>
@@ -189,7 +189,7 @@
             </div>
             <div>
               <div class="exhibition-brief-cta">
-                <a class="cta" href="#">View</a>
+                <a class="cta" href="exhibitions.html">View</a>
               </div>
             </div>
           </div>
@@ -212,7 +212,7 @@
                 Are you a young person looking to learn more about science?
                 Let's learn together
               </p>
-              <a class="cta" href="#">join</a>
+              <a class="cta" href="explore.html">join</a>
             </div>
           </div>
         </div>
@@ -231,7 +231,7 @@
                 We want to work with schools to create places of learning and
                 exploring.
               </p>
-              <a class="cta" href="#">join</a>
+              <a class="cta" href="explore.html">join</a>
             </div>
           </div>
         </div>
@@ -250,7 +250,7 @@
                 Are you looking to get involved with our team of researchers and
                 academics? Join us.
               </p>
-              <a class="cta" href="#">join</a>
+              <a class="cta" href="explore.html">join</a>
             </div>
           </div>
         </div>
