--- a/index.html
+++ b/index.html
@@ -202,9 +202,9 @@
           <div class="explore">
             <div class="explore-picture">
               <img
-                alt="Child having fun with VR glasses"
+                alt="Child making a chemistry experiment"
                 class="image-small"
-                src="images/explore/children.jpg"
+                src="/images/explore/children/chemistry-5632654_1920.jpg"
               />
             </div>
             <div class="explore-brief">
@@ -223,7 +223,7 @@
               <img
                 alt="Teacher and students in science class"
                 class="image-small"
-                src="images/explore/teachers.jpg"
+                src="/images/explore/teachers/teacher-3765909_1280.jpg"
               />
             </div>
             <div class="explore-brief">
@@ -242,7 +242,7 @@
               <img
                 alt="Researcher looking into a microscope"
                 class="image-small"
-                src="images/explore/researchers.jpg"
+                src="/images/explore/researchers/laboratory-2821207_1280.jpg"
               />
             </div>
             <div class="explore-brief">
