Code most CSS for Get involved, The museum, and Who we are pages

--- a/explore.html
+++ b/explore.html
@@ -16,7 +16,7 @@
       rel="stylesheet"
     />
     <link href="css/style.css" rel="stylesheet" />
-    <!--<link href="css/index.css" rel="stylesheet" />-->
+    <link href="/css/explore_the-museum_get-involved.css" rel="stylesheet" />
     <link href="css/media.css" rel="stylesheet" />
     <script
       src="https://kit.fontawesome.com/9aef28119c.js"
@@ -67,6 +67,17 @@
     <main>
         <h1>Explore</h1>
         <h2>For children</h2>
+        <div class="image-wrapper">
+          <div class="children-aeronautics image-one">
+        <img src="/images/explore/children/andrew-ruiz-348421.jpg" alt="Child in a plane simulator" />
+        </div>
+        <div class="children-chemistry image-two">
+        <img src="/images/explore/children/chemistry-5632654_1920.jpg" alt="Child doing a chemistry experiment" />
+        </div>
+        <div  class="children-art image-three">
+        <img src="/images/explore/children/billetto-editorial-334686.jpg" alt="Youngster painting art with VR glasses"/>
+        </div>
+        </div>
         <p>Are you a young person looking to learn more about science? Come on down to our museum, there’s plenty to see and do.</p>
 
         <p>You can learn about Newtonian physics from our bumper swing, or why not travel back in time and meet our resident Woolly Mammoth? Our exhibits are designed to be accessible for interested minds, so make sure you come ready to learn and explore.
@@ -77,11 +88,33 @@
         </p>
         <hr>
         <h2>For teachers</h2>
+        <div class="image-wrapper">
+          <div class="teachers-male-teacher image-one">
+        <img src="/images/explore/teachers/teacher-3765909_1280.jpg" alt="Male teacher in a class with students" />
+        </div>
+        <div class="teachers-science-items image-two">
+        <img src="/images/explore/teachers/back-to-school-g5ca747339_1280.jpg" alt="Drawing of white science items in black background" />
+        </div>
+        <div  class="teachers-female-teacher image-three">
+        <img src="/images/explore/teachers/teacher-4784917_1280.jpg" alt="Female teacher in class with students"/>
+        </div>
+        </div>
         <p>As a community-driven museum, we want to work with schools to create places of learning and exploring. Our team are on hand to give your students guided tours of the museum, teach them in our learning laboratory, and provide great video presentations that will excite and inspire them.
         </p>
         <p>Please <a href="#">get in touch with us here</a> to find out more about our facilities and to arrange a time to bring your students through for a visit.</p>
         <hr>
         <h2>For researchers</h2>
+        <div class="image-wrapper">
+          <div class="researcher-lab image-one">
+        <img src="/images/explore/researchers/laboratory-3827738_1280.jpg" alt="Scientist performing blood tests" />
+        </div>
+        <div class="researchers-engineer image-two">
+        <img src="/images/explore/researchers/scientific-2040795_1280.jpg" alt="Engineer checking machine functionality" />
+        </div>
+        <div  class="researchers-microscope image-three">
+        <img src="/images/explore/researchers/laboratory-2821207_1280.jpg" alt="Scientist seeing through electronic microscope"/>
+        </div>
+        </div>
         <p>Are you looking to get involved with our team of researchers and academics? Our museum offers various ways for you to use our resources and contribute towards them. We have online records, laboratory space, and a working relationship with a number of universities around the country. To find out more about what we can offer, please <a href="#">get in touch with us here.</a> 
         </p>
     </main>
