--- a/who-we-are.html
+++ b/who-we-are.html
@@ -16,7 +16,7 @@
       rel="stylesheet"
     />
     <link href="css/style.css" rel="stylesheet" />
-   <!-- <link href="css/index.css" rel="stylesheet" /> -->
+   <link href="/css/explore_the-museum_get-involved.css" rel="stylesheet"/>
     <link href="css/media.css" rel="stylesheet" />
     <script
       src="https://kit.fontawesome.com/9aef28119c.js"
