--- a/who-we-are.html
+++ b/who-we-are.html
@@ -66,11 +66,25 @@
   </header>
     <main>
         <h1>Who we are</h1>
+        <section>
         <h2>Explore together</h2>
+        <div class="image-wrapper">
+          <div class="who-we-are-mammoth image-one">
+        <img src="/images/who-we-are/mammoth-1257288_1920.jpg" alt="Mammoth fossil exhibit"/>
+        </div>
+        <div class="who-we-are-heart image-two">
+        <img src="/images/who-we-are/heart-2607178_1920.jpg" alt="Plastic heart with veins and arteries"/>
+        </div>
+        <div  class="who-we-are-ants image-three">
+        <img src="/images/who-we-are/genoa-956405_1920.jpg" alt="Giant ants in exhibition hall"/>
+        </div>
+        </div>
         <p>Come join us at the Community Science Museum where we’re committed to making science accessible to all.</p>
         <p>Over the course of human history, science has developed from our early understanding of fire, wind, water, and earth to exploring everything from galaxies far away to the very building blocks of life itself.</p>
         <p>The aim of our museum is to create a space where everyone can experience the wonders of our discoveries and perhaps even ignite a lifelong passion to continue the exploration of the world around us.</p>
         <p>We believe science should not be confined to the textbook, but brought to live through exhibits. This is why we have a large number of exhibits on the many varied subjects of science to explore. Many of these exhibits are designed for you to interact with and play around to see science come to life (apart from the dinosaur exhibits – they only come to life at night when everyone’s gone home).</p>
+      </section>
+      <section>
         <h2>Get in touch</h2>
         <form method="post">
             <label for="name">Name and surname</label>
@@ -95,6 +109,7 @@
             <textarea id="message"></textarea>
             <input type="submit" value="Send" class="cta cta-submit" />
         </form>
+      </section>
 </main>
 <footer>
   <div class="newsletter">
