Fixed submit button position contact form, moved about us content

--- a/index.html
+++ b/index.html
@@ -328,8 +328,10 @@
         <div>
           <p>subscribe to our newsletter</p>
           <form method="post">
+            <div>
           <input class="form" type="email" placeholder="Email address" />
-          <div>
+        </div>
+          <div class="cta-form">
           <input class="cta cta-submit" type="submit" value="send" />
         </div>
         </form>
