--- a/explore.html
+++ b/explore.html
@@ -67,6 +67,22 @@
     <main>
       <section>
         <h1>Explore</h1>
+        <h2>Explore together</h2>
+        <div class="image-wrapper">
+          <div class="who-we-are-mammoth image-one">
+        <img src="/images/who-we-are/mammoth-1257288_1920.jpg" alt="Mammoth fossil exhibit"/>
+        </div>
+        <div class="who-we-are-heart image-two">
+        <img src="/images/who-we-are/heart-2607178_1920.jpg" alt="Plastic heart with veins and arteries"/>
+        </div>
+        <div  class="who-we-are-ants image-three">
+        <img src="/images/who-we-are/genoa-956405_1920.jpg" alt="Giant ants in exhibition hall"/>
+        </div>
+        </div>
+        <p>Come join us at the Community Science Museum where we’re committed to making science accessible to all.</p>
+        <p>Over the course of human history, science has developed from our early understanding of fire, wind, water, and earth to exploring everything from galaxies far away to the very building blocks of life itself.</p>
+        <p>The aim of our museum is to create a space where everyone can experience the wonders of our discoveries and perhaps even ignite a lifelong passion to continue the exploration of the world around us.</p>
+        <p>We believe science should not be confined to the textbook, but brought to live through exhibits. This is why we have a large number of exhibits on the many varied subjects of science to explore. Many of these exhibits are designed for you to interact with and play around to see science come to life (apart from the dinosaur exhibits – they only come to life at night when everyone’s gone home).</p>
         <h2>For children</h2>
         <div class="image-wrapper">
           <div class="children-aeronautics image-one">
@@ -88,7 +104,7 @@
         <p>During the school holidays we run special holiday clubs where you can join other children your age to go on a journey of discovery. Each holiday we pick a new theme to explore. To find out more about the holiday club and how you can join, <a class="link-in-text" href="#">send us a message.</a> 
         </p>
       </section>
-      <hr>
+  <!--    <hr> -->
       <section>
         <h2>For teachers</h2>
         <div class="image-wrapper">
@@ -106,7 +122,7 @@
         </p>
         <p>Please <a class="link-in-text" href="#">get in touch with us here</a> to find out more about our facilities and to arrange a time to bring your students through for a visit.</p>
         </section>
-        <hr>
+      <!--  <hr> -->
         <section>
         <h2>For researchers</h2>
         <div class="image-wrapper">
