--- a/who-we-are.html
+++ b/who-we-are.html
@@ -5,10 +5,10 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta
       name="description"
-      content="Learn about what we do and get in touch with us"
+      content="Get in touch with us"
     />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Community Science Museum | Who we are</title>
+    <title>Community Science Museum | Get in touch</title>
     <link rel="preconnect" href="https://fonts.googleapis.com" />
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
     <link
@@ -65,8 +65,8 @@
     </div>
   </header>
     <main>
-        <h1>Who we are</h1>
-        <section>
+        <h1>Get in touch</h1>
+      <!--  <section>
         <h2>Explore together</h2>
         <div class="image-wrapper">
           <div class="who-we-are-mammoth image-one">
@@ -83,21 +83,21 @@
         <p>Over the course of human history, science has developed from our early understanding of fire, wind, water, and earth to exploring everything from galaxies far away to the very building blocks of life itself.</p>
         <p>The aim of our museum is to create a space where everyone can experience the wonders of our discoveries and perhaps even ignite a lifelong passion to continue the exploration of the world around us.</p>
         <p>We believe science should not be confined to the textbook, but brought to live through exhibits. This is why we have a large number of exhibits on the many varied subjects of science to explore. Many of these exhibits are designed for you to interact with and play around to see science come to life (apart from the dinosaur exhibits – they only come to life at night when everyone’s gone home).</p>
-      </section>
-      <section>
-        <h2>Get in touch</h2>
-        <form method="post">
+      </section>-->
+   <!--   <section>
+        <h2>Get in touch</h2> -->
+        <form method="post" class="contact-form">
           <div class="form-field">
             <label class="contact-heading" for="name">Name and surname</label>
-            <input class="contact-form" type="text" required id="name" placeholder="Melisa Zorraindo" />
+            <input class="contact-field" type="text" required id="name" placeholder="Melisa Zorraindo" />
             </div>
             <div class="form-field">
             <label class="contact-heading" for="email">Email</label>
-            <input class="contact-form" type="email" required id="email" placeholder="example@email.com" />
+            <input class="contact-field" type="email" required id="email" placeholder="example@email.com" />
             </div>
             <div class="form-field">
             <label class="contact-heading" for="subject" required>I would like to <small>(select an option or write your own subject)</small></label>
-            <input class="contact-form" list="subject-option" id="subject" name="subject" />
+            <input class="contact-field" list="subject-option" id="subject" name="subject" />
             </div>
             <datalist id="subject-option">
                 <option value="join the Young Stars club"></option>
@@ -112,9 +112,11 @@
             <label class="contact-heading" for="message">Message</label>
             <textarea id="message"></textarea>
             </div>
+            <div class="cta-form">
             <input type="submit" value="Send" class="cta cta-submit" />
+          </div>
         </form>
-      </section>
+  <!--    </section> -->
 </main>
 <footer>
   <div class="newsletter">
