Removed form styling index newsletter

--- a/index.html
+++ b/index.html
@@ -331,7 +331,7 @@
             <div>
           <input class="form" type="email" placeholder="Email address" />
         </div>
-          <div class="cta-form">
+          <div>
           <input class="cta cta-submit" type="submit" value="send" />
         </div>
         </form>
