Changed pages names and links, added photos to exhibitions page

--- a/exhibitions.html
+++ b/exhibitions.html
@@ -16,7 +16,7 @@
       rel="stylesheet"
     />
     <link href="css/style.css" rel="stylesheet" />
-    <!--<link href="css/index.css" rel="stylesheet" />-->
+    <link href="css/exhibitions.css" rel="stylesheet" />
     <!--<link href="css/media.css" rel="stylesheet" />-->
     <script
       src="https://kit.fontawesome.com/9aef28119c.js"
@@ -69,9 +69,11 @@
     <div class="wrapper">
         <div>
            <!-- <div class="exhibition">-->
+            <div class="exhibition-info">
               <h2>The era of robots</h2>
-              <img alt="Tin robot running towards camera in devastated world" src="/images/exhibitions/featured.jpg">
-              <p>The information revolution is here and robotics and artificial intelligence are the science of the future. From useful home applications of AI to industrial uses of robotics, the future is here. You can even say hello and shake the hand of Rob the Robot.</p>
+              <img alt="Tin robot running towards camera in devastated world" src="/images/exhibitions/fantasy-gbc661e0be_1280.jpg">
+              <p class="exhibition-paragraph">The information revolution is here and robotics and artificial intelligence are the science of the future. From useful home applications of AI to industrial uses of robotics, the future is here. You can even say hello and shake the hand of Rob the Robot.</p>
+            </div>
          <!--   </div> -->
             <div class="exhibition-brief">
               <div>
@@ -92,9 +94,11 @@
           </div>
         <div>
        <!--   <div class="exhibition ecology"> -->
+        <div class="exhibition-info">
             <h2>Time to change</h2>
-            <img alt="Chalkboard reading 'Go green' on leaf background" src="/images/exhibitions/ecology.jpg">
-            <p>As we learn more and more of the impact humans are having on the planet, the more important it becomes that scientists explore how to create a sustainable future not just for humans but for the whole planet.</p>
+            <img alt="Chalkboard reading 'Go green' on leaf background" src="/images/exhibitions/green-gdb8c0fe8a_1280.jpg">
+            <p  class="exhibition-paragraph">As we learn more and more of the impact humans are having on the planet, the more important it becomes that scientists explore how to create a sustainable future not just for humans but for the whole planet.</p>
+            </div>
       <!--    </div> -->
           <div class="exhibition-brief">
             <div>
@@ -115,9 +119,10 @@
         </div>
         <div>
       <!--    <div class="exhibition cosmology"> -->
+        <div class="exhibition-info">
             <h2>The sky above us</h2>
-            <img alt="Picture of the solar system" src="/images/exhibitions/cosmology.jpg">
-            <p>Explore the wonders of our cosmos. Our fantastic exhibition, ‘The Sky Above Us’, explores the night sky and what we can see and know about the universe around us. We’ll locate the various constellations and galaxies that can be seen and learn a bit about the early navigators who used the stars to travel by.</p>
+            <img alt="Picture of the solar system" src="/images/exhibitions/solar-system-439046_1920.jpg">
+            <p  class="exhibition-paragraph">Explore the wonders of our cosmos. Our fantastic exhibition, ‘The Sky Above Us’, explores the night sky and what we can see and know about the universe around us. We’ll locate the various constellations and galaxies that can be seen and learn a bit about the early navigators who used the stars to travel by.</p>
           </div>
           <div class="exhibition-brief">
             <div>
@@ -138,9 +143,11 @@
         </div>
         <div>
      <!--     <div class="exhibition bio-and-med"> -->
+      <div class="exhibition-info">
             <h2>The micro world</h2>
-            <img alt="Blue cells seen through a microscope in dark background" src="/images/exhibitions/bio-and-med.jpg">
-            <p>From micro-organisms to the human body, major breakthroughs in biology are offering us unique insights into the great wonders of the tiny world. Come and see some fascinating tiny creatures in our lab.</p>
+            <img alt="Blue cells seen through a microscope in dark background" src="/images/exhibitions/bacteria-g75a919072_1920.jpg">
+            <p  class="exhibition-paragraph">From micro-organisms to the human body, major breakthroughs in biology are offering us unique insights into the great wonders of the tiny world. Come and see some fascinating tiny creatures in our lab.</p>
+          </div>
      <!--     </div> -->
           <div class="exhibition-brief">
             <div>
@@ -161,9 +168,11 @@
         </div>
         <div>
    <!--       <div class="exhibition evolution"> -->
+    <div class="exhibition-info">
             <h2>Bones talk</h2>
-            <img alt="Tyrannosaurus rex" src="/images/exhibitions/evolution.jpg">
-            <p>Discover the origins of life on this planet and how the species we know today have evolved our time. You can also take some time to meet a few of the creatures who didn’t survive, including our Woolly Mammoth, the Dodos, and a number of dinosaurs too.</p>
+            <img alt="Tyrannosaurus rex" src="/images/exhibitions/landscape-3969074_1280.jpg">
+            <p class="exhibition-paragraph">Discover the origins of life on this planet and how the species we know today have evolved our time. You can also take some time to meet a few of the creatures who didn’t survive, including our Woolly Mammoth, the Dodos, and a number of dinosaurs too.</p>
+          </div>
      <!--     </div> -->
           <div class="exhibition-brief">
             <div>
