--- a/index.html
+++ b/index.html
@@ -58,7 +58,7 @@
             <li><span><a href="get-involved.html"><i class="fas fa-hands-helping"></i>Get involved</a></span>
             </li>
             <li><span>
-              <a href="who-we-are.html"><i class="fas fa-question-circle"></i>Who we are</a></span>
+              <a href="contact.html"><i class="fas fa-comment-dots"></i>Contact</a></span>
             </li>
           </ul>
       </nav>
