--- a/contact.html
+++ b/contact.html
@@ -95,11 +95,21 @@
             <label class="contact-heading" for="email">Email</label>
             <input class="contact-field" type="email" required id="email" placeholder="example@email.com" />
             </div>
-            <div class="form-field">
+            <label class="contact-heading" for="subject" required>Please select the subject</label>
+            <select name="subject" id="subject-option" class="contact-field">
+              <option value="young-stars-club">join the Young Stars club</option>
+              <option value="holiday-club">join the holiday club</option>
+              <option value="group-booking">book a group visit</option>
+              <option value="collaborate-researcher">collaborate as a researcher</option>
+                <option value="donate">donate to the collections department</option>
+                <option value="volunteer">volunteer</option>
+                <option value="internship">apply for an internship</option>
+            </select>
+      <!--      <div class="form-field">
             <label class="contact-heading" for="subject" required>I would like to <small>(select an option or write your own subject)</small></label>
             <input class="contact-field" list="subject-option" id="subject" name="subject" />
-            </div>
-            <datalist id="subject-option">
+            </div> -->
+           <!-- <select id="subject-option">
                 <option value="join the Young Stars club"></option>
                 <option value="join the holiday club"></option>
                 <option value="plan a group visit"></option>
@@ -107,7 +117,7 @@
                 <option value="donate to the Collections department"></option>
                 <option value="volunteer"></option>
                 <option value="apply to an Internship"></option>
-            </datalist>
+            </select> -->
             <div class="form-field">
             <label class="contact-heading" for="message">Message</label>
             <textarea id="message"></textarea>
